--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -81,8 +81,8 @@ $(document).ready(function() {
 <style type="text/css">
 
 .plugin-content h4 {
-    background: #e9e7e7 no-repeat right center;
-    padding: 7px 15px;
+    background: #e9e7e7 no-repeat left center;
+    padding: 7px 15px 7px 20px;
     margin: 0;
     margin-right: 15px;
     font: bold;
