show service short description

--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -165,7 +165,7 @@ end
 <% service_list.each do |service| %>
   <li>
 
-  <h4><%=h service.name %></h4>
+  <h4><%=h service.name %> <em style="position:absolute; left:25%"><%=h service.summary%></em></h4>
 
   <div class='service-content'>
 
