--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,31 +1,59 @@
 <h1><%=_("Edit user %s") %@user.uid%></h1>
 <br>
+<% content_for :head do %>
+  <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "digitalspaghetti.password.js" %>
+
+  <style type="text/css">
+    label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
+  </style>
 
  <script language='javascript'>
   $(document).ready(function(){
    $("#tab_login")[0].style.display="block";
+
+
+      $("#userForm").validate({onsubmit: false})
+
+      // make the error message translatable - override the default messsage
+/*
+      $.extend($.validator.messages, {
+	equalTo: "<%= _("The passwords do not match.") -%>",
+	required: "<%= _("A password is required.") -%>"
+      });
+*/
+
+ $("#userForm").validate({
+  rules: {
+    user_password: "required",
+    user_password2: {
+      equalTo: "#user_password"
+    }
+  }
+});
+
+      $("#user_user_password").pstrength({
+	  'displayMinChar'	: false,
+	  'verdicts'		: [
+	    "<%= _("Weak") %>",
+	    "<%= _("Normal") %>",
+	    "<%= _("Medium") %>",
+	    "<%= _("Strong") %>",
+	    "<%= _("Very Strong") %>"
+	  ],
+      });
   })
 
-function validatePassword(){
- if ($("#user_user_password")[0].value.length==0){
-  empty_password = "<%= _("Empty password.") %>"
-  $("#user_user_password").focus();
-  alert (empty_password);
-  return false;
- } else if ($("#user_user_password")[0].value != $("#user_user_password2")[0].value){
-  password_not_match = "<%= _("The passwords do not match.  Try again.") %>"
-  $("#user_user_password").focus();
-  alert (password_not_match);
-  return false;
- } else
-  return true;
-}
-
+    // start password validation workaround only when "Save" button has been pressed
+    password_validation_enabled = false;
  </script>
+<% end %>
+
+
 
 <% disabled = ! @permissions[:usermodify] %>
 
-<% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put, :onsubmit => "return validatePassword();" } ) do |f| %>
+<% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put, :id => "userForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
  <div class="tab-form">
 <ul class="tab-nav"> 
@@ -45,12 +73,14 @@ function validatePassword(){
     </p>
     <p>
 	<label><%=_("Password")%></label>
-	<%= f.password_field :user_password, :disabled => disabled %>
+	<%= f.password_field :user_password, :onkeyup => "if (password_validation_enabled) $('#userForm').validate().element('#administrator_confirm_password');", :disabled => disabled, :onBlur=>"restoreBox()" %>
     </p>
     <p>
 	<label><%=_("Confirm Password")%></label>
-	<%= f.password_field :user_password2, :disabled => disabled %>
+	<%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :class => "required" %>
     </p>
+    <!-- this is a pre-generated placeholder for the validation messages -->
+    <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
     </fieldset>
   <fieldset id="tab_groups">
     <p>
@@ -77,6 +107,6 @@ function validatePassword(){
     </p>
     </fieldset>
     </div>
-    <p><%= f.submit _("Update"), :disabled => disabled %><%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"%></p>
+    <p><%= f.submit _("Update"), :disabled => disabled, :onclick=>"password_validation_enabled = true; return $('#userForm').validate().element('#user_user_password2');" %><%= link_to _('Back'), {:action => :index}, :class => "button"%></p>
   </div>
 <% end %>
