Disable caching of javascripts

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -1,11 +1,11 @@
 
 <% content_for :head do %>
 
-<!--[if IE]><%= javascript_include_tag "excanvas.js", :cache => true %><![endif]-->
-<%= javascript_include_tag "jquery.jqplot.js", :cache => true %>
-<%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js", :cache => true %>
-<%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js", :cache => true %>
-<%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js", :cache => true %>
+<!--[if IE]><%= javascript_include_tag "excanvas.js" %><![endif]-->
+<%= javascript_include_tag "jquery.jqplot.js" %>
+<%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js" %>
+<%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js" %>
+<%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js" %>
 
 <script type="text/javascript">
 
