--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -8,7 +8,7 @@
     <h3><%=_("No software repository configured.") %></h3>
   <% else %>
     <h3><%=_("Configured software repositories") %></h3>
-      <table cellpadding="3px" class="alternate-rows">
+      <table cellpadding="3px">
 	<tr>
 	  <th>Priority</th>
 	  <th>Enabled</th>
