--- a/plugins/services/app/views/services/_status.rhtml
+++ b/plugins/services/app/views/services/_status.rhtml
@@ -13,21 +13,21 @@ color		= "silver"
 classname	= "status_unknown"
 case status
     when nil, 4
-	label	= _("(unknown)")
+	label	= _("status unknown")
     when 0
-	label	= _("(running)")
+	label	= _("running")
 	color	= "lime"
 	classname	= "status_running"
     when 1,2
-	label	= _("(dead)")
+	label	= _("dead")
 	color	=  "red"
 	classname	= "status_dead"
     when 3
-	label	= _("(not running)")
+	label	= _("not running")
 	color	= "black"
 	classname	= "status_not_running"
     else
-	label	= _("(unknown: %d)") % status
+	label	= _("status unknown: %d") % status
 end
 -%>
 <span class=<%=classname%> style="color: <%=color%>"><%=label%></span>
