- added template and css for flash warning - 0.1.6

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -75,10 +75,12 @@
           <%
             flash_icon = case flash_type
               when :error then "ui-icon-alert"
+              when :warning then "ui-icon-notice"
               else "ui-icon-info"
             end
             flash_style = case flash_type
               when :error then "ui-state-error"
+              when :warning then "ui-state-warning"
               else "ui-state-highlight"
             end
           %>
