--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -15,13 +15,25 @@
           />
   </p>
 
+<div class="plugin-content grid_12" id="allowed-services-list">
+
+<ul id="allowed_services_ul">
+    <% @firewall.services.each do |service| %>
+        <li>
+            <%=h service.name %>
+        </li>
+    <% end %>
+</ul>
+
+</div>
   <p>
+
+  <
        <table>
           <tr>
             <th><%= _("Service") %></th>
             <th><%= _("Allowed") %></th>
           </tr>
-          <% @firewall.services.each do |service| %>
           <tr>
             <td>
               <label for="<%= @cgi_prefix+service.id %>"><%= service.name %></label>
