--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%=_("New User")%></h1>
 
-<% form_for :user, :url => { :action => "create"}  do |f| %>
+<% form_for :user, :url => { :action => "create"}, :html => { :autocomplete => :off}  do |f| %>
   <%= f.error_messages %>
 
   <fieldset>
