when edit user, password shouldn't be mandatory (bnc#580158)

--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -87,7 +87,7 @@
     </p>
     <p>
 	<label><%=_("Confirm Password")%></label>
-	<%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password", :class => "required" %>
+	<%= f.password_field :user_password2, :disabled => disabled, :equalTo => "#user_user_password" %>
     </p>
     <!-- this is a pre-generated placeholder for the validation messages -->
     <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
