--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -32,10 +32,7 @@
  })
 
    function user_validation(){
-     valid=false;
-     password_validation_enabled = true;
-     valid =  $('#userForm').validate().element('#user_user_password2');
-     return valid;
+     return $('#userForm').valid();
    }
 
     // start password validation workaround only when "Save" button has been pressed
@@ -72,11 +69,11 @@
     </p>
     <p>
 	<label><%=_("Login Name")%></label>
-	<%= f.text_field :uid %>
+	<%= f.text_field :uid, :class => "required" %>
     </p>
     <p>
 	<label><%=_("UID Number")%></label>
-	<%= f.text_field :uid_number %>
+	<%= f.text_field :uid_number,:class => "required" %>
     </p>
     <p>
 	<label><%=_("Password")%></label>
