--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -73,7 +73,7 @@
     </p>
     <p>
 	<label><%=_("UID Number")%></label>
-	<%= f.text_field :uid_number,:class => "required" %>
+	<%= f.text_field :uid_number, :min => 1000, :class => "number"  %>
     </p>
     <p>
 	<label><%=_("Password")%></label>
