--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -14,6 +14,7 @@
   <% javascript_tag do -%>
     function submitTime() {
     if (!$("#timeconfig_manual")[0].checked){
+      $('#progress').show();
       return true;
     }
     if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
